--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="/assets/js/news.js"></script>
     <script src="/assets/js/carrousel.js"></script>
     <script src="/assets/js/disco.js"></script>
+    <script src="/assets/js/rewards.js"></script>
 
   </body>
 </html>
