--- a/index.html
+++ b/index.html
@@ -11,22 +11,17 @@
 
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/style-media.css" />
-
   </head>
 
   <body translate="no">
-    <header class="header">
-      
-    </header>
-      <main class="main">
-      </main>
-    <footer class="footer">Footer</footer>
+    <header class="header"></header>
+    <main class="main"></main>
+    <footer class="footer">Footer Baby</footer>
 
     <script src="/assets/js/structure.js"></script>
     <script src="/assets/js/news.js"></script>
     <script src="/assets/js/carrousel.js"></script>
     <script src="/assets/js/disco.js"></script>
     <script src="/assets/js/rewards.js"></script>
-
   </body>
 </html>
