--- a/index.html
+++ b/index.html
@@ -12,24 +12,22 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/menu.css" />
     <link rel="stylesheet" href="/assets/css/style-media.css" />
+    <link rel="stylesheet" href="/assets/css/carrousel.css" />
 
   </head>
 
   <body class="body" translate="no">
+    
+    <div class="footer-menu"></div>
     <header class="header"></header>
     <main class="main"></main>
-    <div class="footer-menu"></div>
     <footer class="footer">Footer</footer>
 
     <script src="/assets/js/structure.js"></script>
     <script src="/assets/js/menu/menu.js"></script>
     <script src="/assets/js/news.js"></script>
     <script src="/assets/js/disco.js"></script>
-
     <script src="/assets/js/carrousel.js"></script>
-
     <script src="/assets/js/rewards.js"></script>
-
-
   </body>
 </html>
