--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="robots" content="index, follow" />
     <meta name="description" content="160carac" />
 
-    <link rel="stylesheet" href="/assets/css/style.css" />
-    <link rel="stylesheet" href="/assets/css/menu.css" />
-    <link rel="stylesheet" href="/assets/css/style-media.css" />
-    <link rel="stylesheet" href="/assets/css/carrousel.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/menu.css" />
+    <link rel="stylesheet" href="assets/css/style-media.css" />
+    <link rel="stylesheet" href="assets/css/carrousel.css" />
 
   </head>
 
@@ -23,11 +23,11 @@
     <main class="main"></main>
     <footer class="footer">Footer</footer>
 
-    <script src="/assets/js/structure.js"></script>
-    <script src="/assets/js/menu/menu.js"></script>
-    <script src="/assets/js/news.js"></script>
-    <script src="/assets/js/disco.js"></script>
-    <script src="/assets/js/carrousel.js"></script>
-    <script src="/assets/js/rewards.js"></script>
+    <script src="assets/js/structure.js"></script>
+    <script src="assets/js/menu/menu.js"></script>
+    <script src="assets/js/news.js"></script>
+    <script src="assets/js/disco.js"></script>
+    <script src="assets/js/carrousel.js"></script>
+    <script src="assets/js/rewards.js"></script>
   </body>
 </html>
