--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="footer-menu"></div>
     <header class="header"></header>
     <main class="main"></main>
-    <footer class="footer">Footer</footer>
+    <footer class="© Wild Code Skool 2022">Footer</footer>
 
     <script src="assets/js/structure.js"></script>
     <script src="assets/js/menu/menu.js"></script>
